src/main/javacc/SumParser.jj
options {
    DEBUG_PARSER = true;
    UNICODE_INPUT = true;
    STATIC = false;
}

PARSER_BEGIN(SumParser)
package io.github.alphahinex.javacc.demo.sum;

/** Simple brace matcher. */
public class SumParser {

  /** Main entry point. */
  public static void main(String args[]) throws ParseException {
    SumParser parser = new SumParser(System.in);
    System.out.println(parser.Sum());
  }

}
PARSER_END(SumParser)

SKIP : {
      " "
    | "\t"
    | "\n"
    | "\r"
}

TOKEN : {
      <SUM: "求和">
    | <INTEGER: (["+","-"])? ["1"-"9"] (["0"-"9"])*>
}

/** Root production. */
int Sum() :
{
    int left;
    int right;
}
{
  <SUM> "(" left=Integer() "," right=Integer() ")" { return left + right; }
}

int Integer() :
{
    Token tk;
}
{
    tk = <INTEGER> { return Integer.parseInt(tk.image); }
}
